<resources>
    <string name="app_name">Brewery Search</string>
    <string name="hint_city">City</string>
    <string name="hint_postal_code">Postal Code</string>
    <string name="hint_region">State/Region</string>
    <string name="hint_country">Country</string>
    <string name="default_country">United States</string>
    <string name="search">Search</string>
    <string name="share_chooser">Share</string>
</resources>