<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="nguyenbao.beerthekiwi.SearchFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/search_brewery"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center"
        android:orientation="vertical"
        >

    <EditText
        android:id="@+id/locality_edit_view"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:hint="@string/hint_city"
        android:imeOptions="actionDone"
        android:inputType="text|textCapWords"
        android:paddingTop="16dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/postalCode_edit_view"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/locality_edit_view"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_postal_code"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textAlignment="center"/>

    <AutoCompleteTextView
        android:id="@+id/region_edit_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/postalCode_edit_view"
        android:layout_centerHorizontal="true"
        android:dropDownWidth="200dp"
        android:hint="@string/hint_region"
        android:imeOptions="actionDone"
        android:inputType="text|textCapWords"
        android:textAlignment="center"/>

    <AutoCompleteTextView
        android:id="@+id/country_edit_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/region_edit_view"
        android:layout_centerHorizontal="true"
        android:dropDownWidth="200dp"
        android:hint="@string/hint_country"
        android:imeOptions="actionDone"
        android:inputType="text|textCapWords"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/brewery_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/country_edit_view"
        android:layout_centerHorizontal="true"
        android:text="@string/search"/>

    </LinearLayout>

</FrameLayout>
